[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[project]
name = "min_circle_rs"
version = "0.1.0"
description = "Minimal enclosing circle from Rust"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "maturin>=1.9.0",
    "numpy>=2.3.1",
]
